--- a/pom.xml
+++ b/pom.xml
@@ -70,10 +70,15 @@
             <artifactId>joda-time</artifactId>
             <version>2.7</version>
         </dependency>
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.10</version>
+        </dependency>
     </dependencies>
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
-        <finalName>easy-ingest</finalName>
+        <finalName>easy-update-solr-index</finalName>
         <plugins>
              <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
