--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <name>EASY Update SOLR Index</name>
     <version>1.x-SNAPSHOT</version>
     <properties>
-        <main-class>nl.knaw.dans.easy.solr.CLI</main-class>
+        <main-class>nl.knaw.dans.easy.solr.EasyUpdateSolrIndex</main-class>
     </properties>
     <scm>
         <developerConnection>scm:git:https://github.com/DANS-KNAW/${project.artifactId}</developerConnection>
