--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,15 @@
             <version>1.1.4</version>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <id>DANS</id>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <url>https://easy.dans.knaw.nl/maven/</url>
+        </repository>
+    </repositories>
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
         <finalName>easy-update-solr-index</finalName>
