--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
        <groupId>nl.knaw.dans.shared</groupId>
-       <artifactId>dans-prototype</artifactId>
-       <version>1.14</version>
+       <artifactId>dans-scala-prototype</artifactId>
+       <version>1.15</version>
     </parent>
     <groupId>nl.knaw.dans.easy</groupId>
     <artifactId>easy-update-solr-index</artifactId>
@@ -20,22 +20,16 @@
     </scm>
     <dependencies>
         <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.rogach</groupId>
             <artifactId>scallop_2.11</artifactId>
         </dependency>
         <dependency>
             <groupId>com.yourmediashelf.fedora.client</groupId>
             <artifactId>fedora-client-core</artifactId>
-            <version>0.7</version>
         </dependency>
         <dependency>
             <groupId>com.yourmediashelf.fedora.client</groupId>
             <artifactId>fedora-client-messaging</artifactId>
-            <version>0.7</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -55,38 +49,27 @@
         </dependency>
         <dependency>
             <groupId>org.scalamock</groupId>
-            <artifactId>scalamock-core_2.11</artifactId>
-            <version>3.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scalamock</groupId>
             <artifactId>scalamock-scalatest-support_2.11</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-xml</artifactId>
-            <version>2.11.0-M4</version>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-xml_2.11</artifactId>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.7</version>
         </dependency>
         <dependency>
-            <!-- Necessary to get rid of joda warnings about missing FromString -->
             <groupId>org.joda</groupId>
             <artifactId>joda-convert</artifactId>
-            <version>1.6</version>
         </dependency>
         <dependency>
             <groupId>commons-configuration</groupId>
             <artifactId>commons-configuration</artifactId>
-            <version>1.10</version>
         </dependency>
         <dependency>
             <groupId>org.scalaj</groupId>
             <artifactId>scalaj-http_2.11</artifactId>
-            <version>1.1.4</version>
         </dependency>
     </dependencies>
     <repositories>
@@ -99,8 +82,6 @@
         </repository>
     </repositories>
     <build>
-        <sourceDirectory>src/main/scala</sourceDirectory>
-        <finalName>easy-update-solr-index</finalName>
         <plugins>
              <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -121,18 +102,6 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.scalatest</groupId>
