--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Maven template
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -8,30 +6,18 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
-.mvn/timing.properties
-
-
-### Scala template
 *.class
-*.log
-
-# sbt specific
-.cache
-.history
-.lib/
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-.idea
+*~
+*.swp
 *.iml
-
-# Scala-IDE specific
-.scala_dependencies
-.worksheet
-
+.idea/
+.DS_Store
+apphome.sh
 home/
+out/
 
-
+# Eclipse
+/.project
+/.settings
+/.classpath
+/.cache
