--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
        <groupId>nl.knaw.dans.shared</groupId>
        <artifactId>dans-scala-prototype</artifactId>
-       <version>1.26</version>
+       <version>1.27</version>
     </parent>
     <groupId>nl.knaw.dans.easy</groupId>
     <artifactId>easy-update-solr-index</artifactId>
@@ -96,7 +96,7 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
-            <url>https://easy.dans.knaw.nl/maven/</url>
+            <url>http://maven.dans.knaw.nl/</url>
         </repository>
     </repositories>
     <pluginRepositories>
@@ -105,7 +105,7 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
-            <url>https://easy.dans.knaw.nl/maven/</url>
+            <url>http://maven.dans.knaw.nl/</url>
         </pluginRepository>
     </pluginRepositories>
     <build>
