EASY-1302 conform to archetype (#40)
* directory levels

* compiler warnings

* scala code formatting

* merged with generated readme, logback and debug-config

* reordered pom and merged with generated one

semantic version requires update of easy-ingest-flow

* copied generated scala files into the project

* quick fix of tests: new version file, merged old Conf class with new CommandLineOptions

TODO: read Configuration once when creating CommandLineOptions from input file

* moved main to Command class, dropped generated setProperty, generated code formatted

* bin.xml + license headers

* fixed a codacy comment

* logback as in pid-generator

* no jsvc require

* reasonable defaults for application.properties

* reasonable defaults in README simplifies CommandLine handling

"run.sh --help" will show the actually configured defaults

* ansible and vagrant (without fedora and solr)

* no ansible/vagrant, a populated fedora instance is too much overkill

* codacy comment

* rpm file is not required

--- a/src/test/resources/debug-config/application.properties
+++ b/src/test/resources/debug-config/application.properties
@@ -6,7 +6,7 @@
 
 default.dataset-batch-size=100
 default.dataset-timeout=1000
-default.fcrepo-server=http://localhost:8080/fedora
+default.fcrepo-server=http://deasy.dans.knaw.nl:8080/fedora
 default.fcrepo-user=fedoraAdmin
 default.fcrepo-password=fedoraAdmin
-default.solr-update-url=http://localhost:8080/solr/datasets/update
+default.solr-update-url=http://deasy.dans.knaw.nl:8080/solr/datasets/update
