Corrected URL of DANS maven repo.

--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
-            <url>http://maven.dans.knaw.nl/</url>
+            <url>http://maven.dans.knaw.nl/releases</url>
         </repository>
     </repositories>
 
@@ -121,7 +121,7 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
-            <url>http://maven.dans.knaw.nl/</url>
+            <url>http://maven.dans.knaw.nl/releases</url>
         </pluginRepository>
     </pluginRepositories>
 
