convert to maven multi-module

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/target/
+/*/target/
 /pom.xml.tag
 /pom.xml.releaseBackup
 /pom.xml.versionsBackup
@@ -15,9 +15,9 @@
 /.idea/
 .DS_Store
 /apphome.sh
-/home/
-/data/
-/data-*/
+/command/home/
+/command/data/
+/command/data-*/
 /.vagrant/
 /.yum-repo
 /.dans.knaw.nl-yum-repo
