--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/*/target/
+/target/
 /pom.xml.tag
 /pom.xml.releaseBackup
 /pom.xml.versionsBackup
@@ -6,6 +6,14 @@
 /release.properties
 /dependency-reduced-pom.xml
 /buildNumber.properties
+/*/target/
+/*/pom.xml.tag
+/*/pom.xml.releaseBackup
+/*/pom.xml.versionsBackup
+/*/pom.xml.next
+/*/release.properties
+/*/dependency-reduced-pom.xml
+/*/buildNumber.properties
 /init-project.sh
 *.class
 *~
