EASY-2443: convert to maven multi-module (#54)
* convert to maven multi-module
* Change name to Master Build
* include iml files in gitignore
* apply rvanheest's fixes
* move plugin to correct line

--- a/.gitignore
+++ b/.gitignore
@@ -6,18 +6,26 @@
 /release.properties
 /dependency-reduced-pom.xml
 /buildNumber.properties
+/*/target/
+/*/pom.xml.tag
+/*/pom.xml.releaseBackup
+/*/pom.xml.versionsBackup
+/*/pom.xml.next
+/*/release.properties
+/*/dependency-reduced-pom.xml
+/*/buildNumber.properties
 /init-project.sh
 *.class
 *~
 *.swp
-/*.iml
+*.iml
 *.sc
 /.idea/
 .DS_Store
 /apphome.sh
-/home/
-/data/
-/data-*/
+/command/home/
+/command/data/
+/command/data-*/
 /.vagrant/
 /.yum-repo
 /.dans.knaw.nl-yum-repo
