--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>nl.knaw.dans.easy</groupId>
     <artifactId>easy-update-solr-index-lib</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.3</version>
 
     <name>EASY Update SOLR Index Library</name>
     <inceptionYear>2015</inceptionYear>
@@ -114,4 +114,8 @@
             <url>https://maven.dans.knaw.nl/snapshots/</url>
         </repository>
     </repositories>
+
+  <scm>
+    <tag>v2.0.3</tag>
+  </scm>
 </project>
