--- a/command/pom.xml
+++ b/command/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>nl.knaw.dans.easy</groupId>
     <artifactId>easy-update-solr-index</artifactId>
-    <version>2.0.4-SNAPSHOT</version>
+    <version>2.0.4</version>
 
     <name>EASY Update SOLR Index Command</name>
     <inceptionYear>2015</inceptionYear>
@@ -91,4 +91,8 @@
             </build>
         </profile>
     </profiles>
+
+  <scm>
+    <tag>v2.0.4</tag>
+  </scm>
 </project>
