--- a/command/pom.xml
+++ b/command/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>nl.knaw.dans.easy</groupId>
     <artifactId>easy-update-solr-index</artifactId>
-    <version>2.0.5</version>
+    <version>2.0.6-SNAPSHOT</version>
 
     <name>EASY Update SOLR Index Command</name>
     <inceptionYear>2015</inceptionYear>
@@ -91,8 +91,4 @@
             </build>
         </profile>
     </profiles>
-
-  <scm>
-    <tag>v2.0.5</tag>
-  </scm>
 </project>
