Changed developerConnection to ssh

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <packaging>pom</packaging>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/DANS-KNAW/easy-update-solr-index</developerConnection>
+        <developerConnection>scm:git:ssh://github.com/DANS-KNAW/easy-update-solr-index</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
